# Warehouse-management-and-storage-optimization

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.devcontainer/: DockerFile  devcontainer.json
.github/workflows/: build-and-release.yaml  ci.yaml  coverage.yaml
private/: build-and-release.yaml
src/Warehouse/: menu.py
src/casey/cli/: menu.py
tests/integration/: integration_test.py
tests/unit/: vuong_test.py
