[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casey"
version = "0.1.0"
description = "Case-y CLI project"
authors = [
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    
]  # runtime deps go here

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]


[tool.isort]
profile = "black"
line_length = 88
